--- a/squirrel-fe/src/assets/style.css
+++ b/squirrel-fe/src/assets/style.css
@@ -172,7 +172,7 @@
 
 /*** Hero Header ***/
 .hero-header {
-    /* background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(../img/bg-hero.jpg); */
+    background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7));
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -268,7 +268,7 @@
 
 /*** Booking ***/
 .booking {
-    /* background: linear-gradient(rgba(15, 23, 43, .7), rgba(15, 23, 43, .7)), url(../img/booking.jpg); */
+    background: linear-gradient(rgba(15, 23, 43, .7), rgba(15, 23, 43, .7)); 
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
